Fix doughnut wrapping

--- a/app/assets/stylesheets/doughnut.css.scss
+++ b/app/assets/stylesheets/doughnut.css.scss
@@ -3,10 +3,11 @@
   position: relative;
   display: inline-block;
   min-width: 200px;
-  width: 30%;
+  width: 25%;
   max-width: 337px;
   height: 100%;
-  margin-left: 40px;
+  margin-left: 2%;
+  white-space: nowrap;
   z-index: 2;
   .doughnutTip {
     position: absolute;
